Part 1/test/UnexpectedSymbol.alg
co Unexpected Symbol co

begin
	a := 2 - 3
	b := $
	c := a + b
	print(c)
end